[project]
name = "WanVideoLooper"
description = "This is a set of custom nodes for ComfyUI designed for generating sequential long video clips based on the Wan 2.2 model architecture, handling continuity between segments and offering advanced control over the sampling process"
version = "1.0.9"
license = {file = "LICENSE"}
dependencies = [
    "color-match",
    "numpy"
]

# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/SquirrelRat/WanVideoLooper"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SquirrelRat/WanVideoLooper/wiki"
"Bug Tracker" = "https://github.com/SquirrelRat/WanVideoLooper/issues"

[tool.comfy]
PublisherId = "squirrelrat"
DisplayName = "WanVideoLooper"
Icon = "https://raw.githubusercontent.com/SquirrelRat/WanVideoLooper/main/icon.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

